<resources>
    <string name="facebook_app_id">545166779479399</string>
    <string name="fb_login_protocol_scheme">fb545166779479399</string>
    <string name="app_name">Nikabuy</string>
    <string name="home_text">Home</string>
    <string name="card_text">Cart</string>
    <string name="order_text">Order</string>
    <string name="account_text">Account</string>
    <string name="log_in_or_register_with_your_phone">Sign in or register with your phone number</string>
    <string name="log_in">Login</string>
    <string name="or">Or</string>
    <string name="register">Register</string>
    <string name="connect_with">Connect with</string>
    <string name="log_in_with_facebook">Login with Facebook</string>
    <string name="log_in_with_b2c">Login with Microsoft</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="ok">Ok</string>
    <string name="phone_require">Phone number is require</string>
    <string name="password_require">Password is require</string>
    <string name="confirm_password_require">Confirm password is require</string>
    <string name="password_and_confirm_password_not_the_same">Password and Confirm Password are not the same</string>
    <string name="verification_code_just_sent">We just sent you a verification code (4 digits)</string>
    <string name="verification_code">Verification code</string>
    <string name="confirm">Confirm</string>
    <string name="not_get_verification_code_question">Didn\'t get the verification code?</string>
    <string name="verification_code_not_correct">Invalid verification code</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading">Please wait…</string>
    <string name="clear">Clear</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="orders">Orders</string>
    <string name="account">Account</string>
    <string name="image_search">Image</string>
    <string name="audio_search">Audio</string>
    <string name="text_search">Text</string>
    <string name="good_detail">Good Detail</string>
    <string name="good_score">Good Score</string>
    <string name="recommend_product">Recommend Product</string>
    <string name="new_purchase_order">New Order</string>
    <string name="buyer">User Information</string>
    <string name="new_deposit">New Deposit</string>
    <string name="payment_password">Payment Password</string>
    <string name="my_box">My Box</string>
    <string name="contact">My Contact</string>
    <string name="forget_password">Forget Password</string>
    <string name="account_link">Account Link</string>
    <string name="mobile_link">Mobile Link</string>
    <string name="new_contact">New Contact</string>
    <string name="deposit">Account balance / Deposit</string>
    <string name="language">Language</string>
    <string name="signout">Signout</string>
    <string name="yuan_usd">Rate (USD - CNY): </string>
    <string name="saleman">Saleman </string>
    <string name="add_saleman">Add your Saleman</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="detail">Detail</string>
    <string name="score">Score</string>
    <string name="vendor">Vendor</string>
    <string name="service_score">Service Score</string>
    <string name="delivery_score">Delivery Score</string>
    <string name="credit_level">Credit Level</string>
    <string name="quantity">Quantity</string>
    <string name="message_to_customer_service">Message to customer service</string>
    <string name="buy_now">Purchase Now</string>
    <string name="quantity_require">Quantity is require</string>
    <string name="you_don_have_cart">You don\'t have cart yet</string>
    <string name="select_all">Select All</string>
    <string name="un_select_all">Not selected</string>
    <string name="shop">Shop</string>
    <string name="unit_price">Unit Price</string>
    <string name="do_you_want_to_clear_cart">Are you sure, you want to the clear carts?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="do_you_want_to_remove_cart">Are you sure, you want to remove </string>
    <string name="cart_to_submit_require">Cart to submit is require</string>
    <string name="cart_add_success">Cart add successfully</string>
    <string name="go_to_cart">Go to Cart</string>
    <string name="back">Back</string>
    <string name="you_don_have_contact_create_now">You don\'t have contact yet, create now</string>
    <string name="mode_of_transportation">Mode of Transportation</string>
    <string name="delivery">Delivery</string>
    <string name="payment_way">Payment Way</string>
    <string name="delivery_warehouse">Delivery Warehouse</string>
    <string name="protection">Protection(It reffer to required: wooden box, case…)</string>
    <string name="total_semi">Total:</string>
    <string name="contact_require">Contact is require</string>
    <string name="select_image">Select Image</string>
    <string name="quantity_semi">Quantity: </string>
    <string name="unit_price_semi">Unit price: </string>
    <string name="qty">Qty </string>
    <string name="is_protect">Protected</string>
    <string name="pay">Pay</string>
    <string name="remark">Remark</string>
    <string name="re_order">Re-order</string>
    <string name="cancel">Cancel</string>
    <string name="order_not_found">Purchase order not found.</string>
    <string name="print_remark">Print Remark</string>
    <string name="do_you_want_cancel_order">Are you sure, you want to cancel this purchase order</string>
    <string name="order_add_to_cart_sccuess_order_now_question">Purchase order item add to card successfully, do you want to buy now?</string>
    <string name="customer_cancel">Customer Cancel</string>
    <string name="payment_password_require">Payment password is require</string>
    <string name="payment_password_must_4_digit">Payment password must be 4 digit</string>
    <string name="to_be_order">To be Order</string>
    <string name="your_payment_password">Your Payment Password</string>
    <string name="box_Protection_semi">Box Protection:</string>
    <string name="service_charge_semi">Service charge:</string>
    <string name="shipping_fee_in_china_semi">Shipping Fee In China: </string>
    <string name="extra_charge_semi">Extra Charge: </string>
    <string name="insurance_fee_semi">Insurance Fee:</string>
    <string name="product_total_amount_semi">Product Total Amount: </string>
    <string name="customer_name_semi">Customer Name:</string>
    <string name="customer_number_semi">Customer Number:</string>
    <string name="your_account_balance_semi">Your account balance: </string>
    <string name="bank_detail">Bank Detail</string>
    <string name="deposit_amount">Deposit Amount</string>
    <string name="transaction_id">Transaction ID</string>
    <string name="date">Date</string>
    <string name="select_date">Select Date</string>
    <string name="comfirm_recharge">Comfirm Recharge</string>
    <string name="image_require">Image is require</string>
    <string name="amount_require">Amount is require</string>
    <string name="transaction_id_require">Transaction ID is require</string>
    <string name="date_require">Date is require</string>
    <string name="all">All</string>
    <string name="waiting_for_payment">Waiting for Payment</string>
    <string name="paid">Paid</string>
    <string name="box_not_found">My Box not found</string>
    <string name="default_contact">Default Contact</string>
    <string name="do_want_to_delete_contact">Are you sure, you want to delete this address?</string>
    <string name="you_don_have_contact_yet">You don\'t have contact address yet</string>
    <string name="contact_name">Contact Name</string>
    <string name="country">Country</string>
    <string name="province">Province</string>
    <string name="district">District</string>
    <string name="address">Address</string>
    <string name="google_map">Google Map</string>
    <string name="save">Save</string>
    <string name="contact_name_require">Contact name is require</string>
    <string name="phone_number_require">Phone number is require</string>
    <string name="country_require">Country is require</string>
    <string name="province_require">Province is require</string>
    <string name="district_require">District is require</string>
    <string name="address_require">Address is require</string>
    <string name="link_your_mobile">Link Your Mobile</string>
    <string name="saleman_code">Saleman Code</string>
    <string name="do_you_want_sign_out">Are you sure, do you want to sign out now?</string>
    <string name="forget_password_quastion">Forget password?</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="register_with_facebook">Register with Facebook</string>
    <string name="past_goods_url_or_key_phrase">past goods url or key phrase</string>
    <string name="alibaba_1688">1688</string>
    <string name="taobao">Taobao-Tmall</string>
    <string name="text_search_require">Text search is require</string>
    <string name="search_product_not_found">Search product not found</string>
    <string name="take_photo">Take Photo</string>
    <string name="browe_from_galery">Browe from Galery</string>
    <string name="khmer">Khmer</string>
    <string name="English">English</string>
    <string name="china">China</string>
    <string name="start_record">Start Record</string>
    <string name="stop_record">Stop Record</string>
    <string name="internet_problem">Internet connection problem</string>
    <string name="your_email">Your Email</string>
    <string name="your_code">Your ID</string>
    <string name="name">Name</string>
    <string name="customer_level">Customer Level</string>
    <string name="search_by_audio_slow">Search by audio is a bit slow, we will show the result soon, Please wait...</string>
    <string name="search_by_image_slow">Search by image is a bit slow, we will show the result soon, Please wait...</string>
    <string name="login_with_old_account">Login with your old Account</string>
    <string name="are_you_existing_customer">Are you existing customer?</string>
    <string name="link_your_facebook">Link Your Facebook</string>
    <string name="how_to_link_your_account">watch how to link your account with your phone number or Facebook</string>
    <string name="product">Product</string>
    <string name="service">Service</string>
    <string name="level">Level</string>
    <string name="product_description">Product Description</string>
    <string name="addCartRemark1">1. If you see an incorrect price of the item shown above, do not worry, we will make adjustments after the audit and the price will be changed to match the original price of the item.</string>
    <string name="addCartRemark2">2. All items shown here are not for sale by Nikabuy, they are for sale by third parties. If there are any items that are legally affected or infringe on the order, the third party, the seller, is responsible and is not affiliated with us.</string>
    <string name="stock">Stock</string>
    <string name="please_select_product_variant">Please select product variant</string>
    <string name="price">Price</string>
    <string name="baches">Baches</string>
    <string name="total">Total</string>
    <string name="total_quantity_must_grater_or_equal">Total quantity must greater or equal {0}</string>
    <string name="total_quantity">Total quantity</string>
    <string name="please_select_sale_man">Please select saleman</string>
    <string name="name_require">Name is require</string>
    <string name="share">Share</string>
    <string name="click_below_image_to_upload">Click below image to upload</string>
    <string name="source">Source</string>
</resources>