<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.skailab.nikabuy.viewModels.AccountViewModel" />
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/loginPageBackgroundColor"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:padding="24dp"
            android:paddingTop="16dp">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="48dp"
                android:layout_marginBottom="16dp"
                android:src="@drawable/logo"
                android:contentDescription="@string/app_name"  />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/log_in_or_register_with_your_phone"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/loginq_button"
                style="@style/Widget.MaterialComponents.Button.Icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:text="@string/log_in" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/or"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/register_button"
                style="@style/Widget.MaterialComponents.Button.Icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:text="@string/register" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/connect_with"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnFacebookLogin"
                style="@style/facebookButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawableStart="@drawable/facebook64"
                android:textAllCaps="false"
                android:text="@string/log_in_with_facebook"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnB2c"
                style="@style/microsoftButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_ms_logo"
                android:textAllCaps="false"
                android:visibility="gone"
                android:text="@string/login_with_old_account" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLanaguage"
                style="@style/Widget.MaterialComponents.Button.Icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:text="ភាសា/Language/语言/" />
        </LinearLayout>
    </ScrollView>

</layout>
