<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnPay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pay"
            android:textAllCaps="false"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            />
        <Button
            android:id="@+id/btnRemark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remark"
            android:textAllCaps="false"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            />
        <Button
            android:id="@+id/btnReorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/re_order"
            android:textAllCaps="false"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            />
        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textAllCaps="false"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        android:background="@color/colorLightGreen"/>
</LinearLayout>
