<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.skailab.nikabuy.viewModels.RegisterViewModel" />
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/loginPageBackgroundColor"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:padding="10dp"
            android:paddingTop="10dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"

                app:srcCompat="@drawable/you_avatar"
                android:contentDescription="@string/app_name"  />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:visibility="@{viewModel.showRegisterPanel? View.VISIBLE:View.GONE}"
                android:orientation="vertical">
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/name"
                        android:inputType="textPersonName"
                        android:text="@={viewModel.register.name}"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_number"
                    android:id="@+id/TextInputLayoutPhone"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/phone_edit_text"
                        android:inputType="phone"
                        android:text="@={viewModel.register.phone}"

                        />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/txtConfirmPassword"
                        android:text="@={viewModel.register.password}"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/txtPassword"
                        android:text="@={viewModel.register.confirmPassword}"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/saleman">
                    <AutoCompleteTextView
                        android:id="@+id/filledSaleMan"
                        android:layout_width="match_parent"
                        android:inputType="none"
                        android:clickable="false"
                        android:focusable="false"
                        android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:hint="@string/payment_password"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/txtPaymentPassword"
                        android:inputType="numberPassword"
                        android:text="@={viewModel.register.paymentPassword}"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/register_button"
                    style="@style/Widget.MaterialComponents.Button.Icon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:text="@string/submit" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:visibility="@{viewModel.showRegisterPanel? View.GONE:View.VISIBLE}"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/verification_code_just_sent"
                    />
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/verification_code"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/confirm_verification"
                        android:inputType="number"
                        android:text="@={viewModel.register.confirmVerificationCode}"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/confirm_verification_button"
                    style="@style/Widget.MaterialComponents.Button.Icon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:text="@string/confirm" />
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/resent_verifcation_code_button"
                    style="@style/Widget.MaterialComponents.Button.Icon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/not_get_verification_code_question" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_vertical"
                android:layout_marginTop="40dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/or"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    />
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnFacebookLogin"
                    style="@style/facebookButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:textAllCaps="false"
                    android:drawableStart="@drawable/facebook64"
                    android:text="@string/register_with_facebook"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</layout>
