<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.skailab.nikabuy.viewModels.LoginViewModel" />
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/loginPageBackgroundColor"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:padding="10dp"
            android:paddingTop="10dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:tint="?android:attr/textColorPrimary"
                app:srcCompat="@drawable/baseline_account_circle_black_48"
                android:contentDescription="@string/app_name"  />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:orientation="vertical">
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_number"
                    android:id="@+id/TextInputLayoutPhone"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/txtUserName"
                        android:inputType="phone"
                        android:text=""
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/txtPassword"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnLogin"
                    style="@style/Widget.MaterialComponents.Button.Icon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:text="@string/log_in" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_marginTop="10dp">
                    <Button
                        android:id="@+id/btnForgetPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/forget_password_quastion"
                        android:textAllCaps="false"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_vertical"
                    android:layout_marginTop="40dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/or"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold"
                        />
                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnFacebookLogin"
                        style="@style/facebookButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:textAllCaps="false"
                        android:drawableStart="@drawable/facebook64"
                        android:text="@string/login_with_facebook"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</layout>
